--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style .css">
   <title>Portfolio</title>
 </head>
 
@@ -20,7 +20,7 @@
       <div class="row no-gutter">
         <div class="col-lg-4 col-md-5">
           <img
-            src="https://scontent.fcrk1-3.fna.fbcdn.net/v/t39.30808-6/214634214_351995516544862_2065090694630354736_n.png?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=aABWE94qkuwAX-mHygp&_nc_ht=scontent.fcrk1-3.fna&oh=00_AfA7-falbg73-KRgg_dpSc_sBBfILUxPTeU5Z519-XZ6nQ&oe=639D9012"
+            src="https://mail.google.com/mail/u/0?ui=2&ik=d39faa7bd0&attid=0.1&permmsgid=msg-f:1757438806084011840&th=1863ad48671fc740&view=att&disp=safe"
             alt="">
         </div>
         <div class="col-lg-8 col-md-7">
@@ -52,7 +52,7 @@
             </div>
 
             <div class="p-4 bg-black">
-              Full Stack Web Developer
+              Full Stack Developer
             </div>
 
             <div>
@@ -95,11 +95,23 @@
       <div class="progress mb-3">
         <div class="progress-bar bg-success" style="width:60%"></div>
       </div>
+      <h4>React 18 </h4>
+      <div class="progress mb-3">
+        <div class="progress-bar bg-success" style="width:50%"></div>
+      </div>
+      <h4>Node.js </h4>
+      <div class="progress mb-3">
+        <div class="progress-bar bg-success" style="width:50%"></div>
+      </div>
+      <h4>Express </h4>
+      <div class="progress mb-3">
+        <div class="progress-bar bg-success" style="width:50%"></div>
+      </div>
       <h4>Javascript </h4>
       <div class="progress mb-3">
         <div class="progress-bar bg-success" style="width:50%"></div>
       </div>
-      <h4>Bootstrap</h4>
+      <h4>Bootstrap 4</h4>
       <div class="progress mb-3">
         <div class="progress-bar bg-success" style="width:50%"></div>
       </div>
